Da uma jeitada na inserção do elementos pelo os controllers.

--- a/src/br/com/ed2/gui/principal/ViewTelaPrincipal.fxml
+++ b/src/br/com/ed2/gui/principal/ViewTelaPrincipal.fxml
@@ -10,65 +10,19 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="br.com.ed2.gui.principal.ControllerTelaPrincipal">
   <!-- TODO Add Nodes -->
   <children>
-    <BorderPane prefHeight="377.0" prefWidth="600.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0">
-      <bottom>
-        <VBox minHeight="43.0" prefHeight="50.0" prefWidth="600.0">
-          <children>
-            <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="5.0" VBox.margin="$x5">
-              <children>
-                <Label text="Passo:" wrapText="false">
-                  <font>
-                    <Font name="System Bold" size="14.0" fx:id="x1" />
-                  </font>
-                </Label>
-                <Label fx:id="passoAtual" text="00">
-                  <font>
-                    <Font size="14.0" fx:id="x4" />
-                  </font>
-                </Label>
-                <Label font="$x1" text="/" />
-                <Label fx:id="totalDePassos" font="$x4" text="00" />
-              </children>
-              <padding>
-                <Insets fx:id="x5" />
-              </padding>
-            </HBox>
-            <HBox alignment="TOP_RIGHT" padding="$x5" prefHeight="30.0" prefWidth="600.0" spacing="10.0" VBox.margin="$x5">
-              <children>
-                <Button font="$x4" mnemonicParsing="false" onAction="#btAnterior" text="Anterior" />
-                <Button font="$x4" mnemonicParsing="false" onAction="#btProximo" text="Proximo" />
-              </children>
-            </HBox>
-          </children>
-          <padding>
-            <Insets bottom="8.0" right="8.0" top="8.0" />
-          </padding>
-          <BorderPane.margin>
-            <Insets bottom="8.0" />
-          </BorderPane.margin>
-        </VBox>
-      </bottom>
+    <BorderPane id="containerDasEstruturas2D" prefHeight="377.0" prefWidth="600.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0">
       <center>
-        <ScrollPane id="containerDasEstruturas2D" hbarPolicy="ALWAYS" prefHeight="200.0" prefWidth="200.0" vbarPolicy="ALWAYS">
-          <content>
-            <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
-              <children>
-                <Label fx:id="lbInformacaoPassoAPasso" font="$x4" text="Label" />
-                <Pane fx:id="containerDasEstruturas2D" prefHeight="200.0" prefWidth="200.0" />
-              </children>
-              <padding>
-                <Insets left="5.0" top="4.0" />
-              </padding>
-            </VBox>
-          </content>
-        </ScrollPane>
+        <AnchorPane fx:id="containerDasEstruturas2D" prefHeight="200.0" prefWidth="200.0" />
       </center>
       <top>
         <VBox prefHeight="112.0" prefWidth="600.0">
           <children>
             <HBox id="inserir" prefHeight="-1.0" prefWidth="200.0">
               <children>
-                <Label font="$x4" text="Inserção:" HBox.hgrow="ALWAYS">
+                <Label text="Inserção:" HBox.hgrow="ALWAYS">
+                  <font>
+                    <Font size="14.0" fx:id="x4" />
+                  </font>
                   <HBox.margin>
                     <Insets left="5.0" top="2.0" />
                   </HBox.margin>
