Consegui salvar um printo pra uma interação da estrutura

--- a/src/br/com/ed2/gui/relatorio/ViewRelatorio.fxml
+++ b/src/br/com/ed2/gui/relatorio/ViewRelatorio.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane id="BorderPane" disable="false" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="1.0" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="br.com.ed2.gui.relatorio.ControllerRelatorio">
+<BorderPane id="BorderPane" fx:id="borderPane" disable="false" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="1.0" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="br.com.ed2.gui.relatorio.ControllerRelatorio">
   <bottom>
     <VBox minHeight="48.0" prefHeight="60.0" prefWidth="600.0" spacing="10.0" BorderPane.alignment="TOP_LEFT">
       <children>
