Inserção da Splay e a exibição da inseração foram implementadas

--- a/src/br/com/ed2/gui/principal/ViewTelaPrincipal.fxml
+++ b/src/br/com/ed2/gui/principal/ViewTelaPrincipal.fxml
@@ -108,6 +108,7 @@
         <Menu mnemonicParsing="false" text="Estruturas">
           <items>
             <MenuItem mnemonicParsing="false" onAction="#menuAvl" text="Avl" />
+            <MenuItem mnemonicParsing="false" onAction="#menuSplay" text="Splay" />
             <Menu mnemonicParsing="false" text="Hashing Aberta">
               <items>
                 <MenuItem mnemonicParsing="false" text="Lista" />
